@@ -1,3 +1,7 @@
+2019-06-13  Petasis George  <petasis@iit.demokritos.gr>
+	* library/tkdnd_generic.tcl: Removed usage of "{*}" for better Tcl 8.4
+	compatibility.
+
 2019-06-09  Petasis George  <petasis@iit.demokritos.gr>
 	* doc/tkDND.n: Documented %x, %y binding keywords.
 
